force-app/main/default/objects/OmniStudioTracking__c/OmniStudioTracking__c.object-meta.xml
<CustomObject>
    <label>OmniStudio Tracking</label>
    <pluralLabel>OmniStudio Tracking</pluralLabel>
    <description>Comprehensive tracking for OmniStudio components including OmniScripts, IPs, and LWC FlexiCards</description>
    <nameField>
        <type>Text</type>
        <label>Tracking Name</label>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject> 