force-app/main/default/objects/OmniStudioTracking__c/fields/ComponentType__c.field-meta.xml
<CustomField>
    <fullName>ComponentType__c</fullName>
    <label>Component Type</label>
    <length>255</length>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>OmniScript</fullName>
            </value>
            <value>
                <fullName>IntegrationProcedure</fullName>
                <label>Integration Procedure</label>
            </value>
            <value>
                <fullName>FlexiCard</fullName>
            </value>
            <value>
                <fullName>LWC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField> 