force-app/main/default/objects/OmniStudioTracking__c/fields/StepName__c.field-meta.xml
<CustomField>
    <fullName>StepName__c</fullName>
    <label>Step Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 