force-app/main/default/objects/OmniStudioTracking__c/fields/TimeSpent__c.field-meta.xml
<CustomField>
    <fullName>TimeSpent__c</fullName>
    <label>Time Spent (ms)</label>
    <precision>18</precision>
    <scale>0</scale>
    <required>true</required>
    <type>Number</type>
</CustomField> 